limpiando el sonar